text alignment fixes

--- a/src/pages/Content.css
+++ b/src/pages/Content.css
@@ -48,6 +48,10 @@
   text-shadow: -2px 2px 0 rgba(143, 47, 90, 0.5), -5px 7px 14px rgba(0, 0, 0, 0.26);
 }
 
+.content-page .page-title {
+  margin-bottom: 2rem;
+}
+
 .reel-gallery {
   display: grid;
   grid-template-columns: 1fr;
